@@ -331,9 +331,15 @@
 #endif # LISPARIT
 
 
-# Liefert 2^n, n eine Constant expression.
-# Ergebnis dasselbe wie bit(n), jedoch undefiniert falls n<0 oder n>=32.
+# Returns 2^n, n being a constant expression.
+# Returns the same value as bit(n), is however undefined if n<0 or n>=32.
   #define bitc(n)  (1UL << (((n) >= 0 && (n) < intLsize) ? (n) : 0))
+
+#ifdef HAVE_LONGLONG
+# Returns 2^n, n being a constant expression.
+# Returns the same value as wbit(n), is however undefined if n<0 or n>=64.
+  #define wbitc(n)  (1ULL << (((n) >= 0 && (n) < intQsize) ? (n) : 0))
+#endif
 
 
 #ifdef LISPARIT
