@@ -1,3 +1,8 @@
+2004-10-29  Bruno Haible  <bruno@clisp.org>
+
+	* aridecl.d (wbitc): New macro.
+	* intelem.d (UQ_to_I): Use it instead of bitc.
+
 2004-10-29  Sam Steingold  <sds@gnu.org>
 
 	* defs1.lisp (sys::member1): do not call IDENTITY
